Bug 1158735 - FetchEvent.client asserting in onFetch when there's no document. r=bkelly